# base-ontology

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tox.ini
base_ontology/: node.py  relation.py
src/base_ontology/: __init__.py  relation.py
tests/: test_base_ontology.py
