[project]
name = "base-ontology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Arda Can Aras", email = "ardaaras99@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.10.6"]

[tool.ruff]
line-length = 200

[project.scripts]
base-ontology = "base_ontology:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true


[tool.ruff.lint.extend-per-file-ignores]
"*" = ["B008"]
"tests/*" = ["S101"]

[dependency-groups]
dev = [
    "commitizen>=4.4.1",
    "mypy>=1.15.0",
    "pep8-naming>=0.14.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
    "tox>=4.24.2",
]
