[project]
name = "base-ontology"
version = "0.1.0"
description = "Base Ontology package"
authors = [{ name = "Arda Can Aras", email = "ardaaras99@gmail.com" }]
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"

dependencies = ["pydantic>=2.11.1"]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "pip-audit>=2.8.0",
    "mypy>=1.15.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.5",
    "commitizen>=4.4.1",
    "pep8-naming>=0.14.1",
    "pre-commit>=4.2.0",
    "pyupgrade>=3.19.1",
    "ruff>=0.11.0",
    "tox>=4.24.2",
]

[tool.ruff]
line-length = 200

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "I",  # isort
    "UP", # pyupgrade
    "N",  # pep8-naming
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version = "0.1.0"
version_provider = "uv"
version_files = [
    "pyproject.toml:version",
    "base_ontology/__init__.py:__version__",
]
major_version_zero = true
update_changelog_on_bump = true
